<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/players_image"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Equipo 1"
            android:textSize="24sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/team1NameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/teamname1"
            android:minHeight="48dp"
            android:text="@string/team1" />

        <EditText
            android:id="@+id/team1Player1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/name1"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/team1Player2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name2"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team2"
            android:textSize="24sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/team2NameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/teamname2"
            android:minHeight="48dp"
            android:text="@string/team2" />

        <EditText
            android:id="@+id/team2Player1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/name1"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/team2Player2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name2"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/startDoubleGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:background="@android:color/holo_green_dark"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
