<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/players_image"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/player1NameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:hint="@string/name1"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/player2NameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:hint="@string/name2"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/startSingleGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</LinearLayout>
