<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/court_image"
    android:padding="16dp">

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="#FF000000"
        android:gravity="center"
        android:padding="10dp"
        android:text="00:00"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="350dp"
        android:layout_below="@id/timerTextView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="200dp"
        android:gravity="fill_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/player1Layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E6FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player1NameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/player1"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player1ScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="0"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/player1SetsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="0"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_dark" />

        <LinearLayout
            android:id="@+id/player2Layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E6FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player2NameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player2"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player2ScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="0"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/player2SetsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="0"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pauseResumeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            style="@style/AppTheme.Button"
            android:text="@string/pausar_match"
            android:visibility="visible" />

        <Button
            android:id="@+id/endMatchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/end_match"
            android:visibility="visible" />
    </LinearLayout>
</RelativeLayout>
